stop squishing of images on one mobile only

--- a/css.css
+++ b/css.css
@@ -100,6 +100,7 @@ footer a {
   padding: 4em;
   margin-bottom: 8em;
 }
+
 @media (max-width: 800px) {
   .introduction {
     display: block;
@@ -113,6 +114,7 @@ img {
   max-height: 100%;
   width: auto;
   height: auto;
+  object-fit: contain;
 }
 
 h3 {
@@ -204,6 +206,7 @@ h4 {
 .sliderSlideContent {
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: absolute;
   padding: 2.2em 4em 0em 4em;
   right: 0;
